--- a/index.html
+++ b/index.html
@@ -1,79 +1,35 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="ko">
 <head>
-    <meta charset="utf-8">
-    <title>도그풋 메이</title>  
-    <link href="style.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        @font-face {
+          font-family: 'ANB';
+          font-style: Bold;
+          font-weight: Bold;
+          src: url('ANB.eot'),
+               url('ANB.woff') format('woff'), 
+               url('ANB.woff2') format('woff2'),       
+               url('ANB.ttf')  format('truetype'); 
+
+         }
+
+         * {
+             font-family: 'ANB';
+         }
+    </style>
 </head>
-
 <body>
-  <script type="text/javascript" src="script.js"></script>
-  <div id="app">
-    <main class="sticky-container" ref="sticky-container">
-      <div class="sticky">
-        <div class="slide-container">
-          <div class="slide" ref="sl1">
-            <div class="slide-big-text">
-              <p>안녕하세요.</p>
-            </div>
-          </div>
-          <div class="scdown" ref="scdown">
-            <div class="scdown-text">
-              아래로 스크롤하세요.
-            </div>
-          </div>
-          <div class="slide" ref="sl2">
-            <div class="slide-big-text">
-              <p>처음 뵙겠습니다.</p>
-            </div>
-          </div>
-          <div class="slide sl3" ref="sl3">
-            <div class="slide-big-text">
-              <p>
-                동쪽에서 새로운 해가
-              </p>
-              <p>이윽고 떠올랐습니다.</p>
-            </div>
-          </div>
-          <div class="slide slide-left sl4" ref="sl4">
-            <div class="sl4-content">
-              <div class="slide-big-text" ref="sl4-big">
-                <p ref="sl4-big-1">자세한</p>
-                <p ref="sl4-big-2">설명이</p>
-                <p ref="sl4-big-3">있을 수도 있어요</p>
-              </div>
-              <div class="slide-small-text">
-                <p>
-                  그렇습니다.
-                </p>
-                <p>
-                  이건
-                </p>
-                <p>
-                  글씨가 좀 작습니다.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="wave" ref="wave">
-            뭔가 독립적으로 움직이는 배경
-          </div>
-
-          <div class="slide slide-left sl5" ref="sl5">
-            <div class="slide-big-text">
-              <p>엘바노프 스튜디오는</p>
-              <p>당신의 풍요로운</p>
-              <p>나날을 꿈꿉니다.</p>
-            </div>
-            <div class="go-surf-wrapper">
-              <a href="https://elvanov.com/2195" target="_blank">이 코드의 설명을 보려면 여기를 눌르세요.</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </main>
-
-  </div>
+    <h1>개발하는 메이의 웹사이트</h1>
+    <progress></progress>
+    개발하고자 하는 메이의 웹사이트입니다.<br>
+    풀스택이 되고자 노력하고 있습니다.
+    <h1>무슨 언어를 다루지?</h1>
+    JS, C, C++
+    <h1>도그풋메이가 만들어나가는 창의적 세상</h1>
+    <a href="https://velog.io/@dogfootmay">기대해주세요!</a>
 </body>
-
 </html>
