--- a/index.html
+++ b/index.html
@@ -7,29 +7,19 @@
     <title>Document</title>
     <style>
         @font-face {
-          font-family: 'ANB';
+          font-family: 'Pretendard';
           font-style: Bold;
           font-weight: Bold;
-          src: url('ANB.eot'),
-               url('ANB.woff') format('woff'), 
-               url('ANB.woff2') format('woff2'),       
-               url('ANB.ttf')  format('truetype'); 
-
+          src: url('./font/pt.woff') format('woff'), 
+               url('./font/pt.woff2') format('woff2'),       
          }
 
          * {
-             font-family: 'ANB';
+             font-family: 'Pretendard';
          }
     </style>
 </head>
 <body>
-    <h1>개발하는 메이의 웹사이트</h1>
-    <progress></progress>
-    개발하고자 하는 메이의 웹사이트입니다.<br>
-    풀스택이 되고자 노력하고 있습니다.
-    <h1>무슨 언어를 다루지?</h1>
-    JS, C, C++
-    <h1>도그풋메이가 만들어나가는 창의적 세상</h1>
-    <a href="https://velog.io/@dogfootmay">기대해주세요!</a>
+    테스트
 </body>
 </html>
