--- a/index.html
+++ b/index.html
@@ -6,17 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        @font-face {
-          font-family: 'Pretendard';
-          font-style: Bold;
-          font-weight: Bold;
-          src: url('./font/pt.woff') format('woff'), 
-               url('./font/pt.woff2') format('woff2'),       
-         }
+        @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
 
-         * {
-             font-family: 'Pretendard';
-         }
+        * { 
+            font-family: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', sans-serif;
+        }
     </style>
 </head>
 <body>
